# syncam

./: CMakeLists.txt  Makefile  functions.c  syncam.c  syncam.h
